# pyRemoteParams

./: .gitignore  .mypy.ini  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
docs/: OSC.md
remote_params/: WebsocketServer.py  __init__.py  http.py  http_utils.py  osc.py  params.py  schema.py  server.py  ui.html  websocket.py
remote_params/examples/: image.py  osc.py  websocket_client.py  websocket_server.py
remote_params/oscpy/: cli.py  client.py  parser.py  server.py
remote_params/params/: __init__.py  param.py  params.py  types.py
test/: test_http_server.py  test_osc.py  test_params.py  test_schema.py  test_server.py  test_websocket_server.py
tests/: http_server_test.py  osc_test.py  params_test.py  schema_test.py  server_test.py  websocket_server_test.py
